fix: Align hero section both img and title
Style sign-up buttons, add Lorem to hero sub-text
fix padding for all sections and change gap prop
to % for better alignment.

--- a/css/style.css
+++ b/css/style.css
@@ -1,101 +1,134 @@
 /* || GENERAL STYLES */
 
 * {
-    margin: 0;
-    box-sizing: border-box;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 html {
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;    
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
-
 
 /* || COLORS AND FONTS */
 
 .header-logo {
-    font-weight: 600;
+  /* border: 1px solid purple; */
+
+  font-weight: 600;
 }
 
 .header-section {
-    /* border: 1px solid yellow; */
+  /* border: 1px solid yellow; */
 
-    font-size: 24px;
-    color: #F9FAF8;
+  font-size: 24px;
+  color: #f9faf8;
 
-    display: flex;
-    justify-content: space-between;    
-    gap: 28px;
+  display: flex;
+  justify-content: space-between;
+  gap: 25%;
 }
 
 .hero-section {
-    border: 1px solid aqua;
+  /* border: 1px solid aqua; */
 
-    padding: 0.8em 4em;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 25%;
 }
 
-.hero-section, footer {
-    background-color: #1F2937;
+.title {
+  border: 1px solid green;
+
+  height: 225px;
+  padding-top: 0;
+
+  align-self: baseline;
+}
+
+.header-section,
+.hero-section,
+footer {
+  background-color: #1f2937;
+
+  padding: 0.8em 7em;
 }
 
 .hero {
-    font-weight: bolder;
-    font-size: 48px;
-    color: #F9FAF8 ;
+  font-weight: bolder;
+  font-size: 48px;
+  color: #f9faf8;
 }
 
-.hero-secondary-text,a {
-    font-size: 18px;
-    color: #E5E7EB;
+.hero-secondary-text,
+a {
+  font-size: 18px;
+  color: #e5e7eb;
+  margin-bottom: 10px;
 }
 
-
-.button, .signUp {
-    background-color: #3882F6;
+.button,
+.sign-up-section {
+  color: white;
+  background-color: #3882f6;
 }
 
-h2  {
-    font-size: 36px;
-    font-weight: bolder;
-    color: #1F2937;
+.button {
+  font-weight: 600;
+  border: 2px solid #3882f6;
+  border-radius: 5px;
+  padding: 7px 18px;
+}
+
+.button.signUp {
+  border: 2px solid white;
+}
+
+h2 {
+  font-size: 36px;
+  font-weight: bolder;
+  color: #1f2937;
+}
+
+.info-section {
+  background-color: whitesmoke;
 }
 
 .quote-section {
-    background-color: #E5E7EB;
+  background-color: #e5e7eb;
 
-    padding: 1em 4em;
+  padding: 1em 8em;
 }
 
 q {
-    font-size: 36px;
-    font-style: italic;
-    font-weight: lighter;
-    color: #1F2937;
+  font-size: 36px;
+  font-style: italic;
+  font-weight: 200;
+  color: #1f2937;
 }
 
 /* || DISPLAY */
 
 .container {
-    /* border: 1px solid green; */
+  /* border: 1px solid green; */
 
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .header-links {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    gap: 18px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 18px;
 }
 
 .info-section,
-.quote-section,
 .sign-up-section {
-    padding: 1em 4em;
+  padding: 1em 8em;
 }
-
-
